fixed search bar media query and adjusted search button so no gap shows

--- a/src/app/shared/components/search/search.component.css
+++ b/src/app/shared/components/search/search.component.css
@@ -3,8 +3,8 @@ body {
 }
 
 .main-container {
-    display: flexbox;
-    /* flex-direction: column; */
+    display: flex;
+    flex-direction: column;
     align-items: center;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
@@ -17,7 +17,7 @@ body {
 input {
     border-right: none;
     border-radius: 5px;
-    margin-right: -30px;
+    margin-right: -25px;
     width: 200px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
@@ -40,6 +40,7 @@ i {
         justify-content: space-around;
         height: 25px;
         margin-top: 20px;
+        flex-direction: row;
     } 
 
 }
